开始写博客了（进行中）

--- a/source/_posts/1. Unity3D单元测试框架介绍.md
+++ b/source/_posts/1. Unity3D单元测试框架介绍.md
@@ -1,7 +1,7 @@
 ---
 layout: posts
-title: 1. Unity3D单元测试框架介绍
-categories: Unity3D单元测试
+title: 1. Unity3D 单元测试框架介绍
+categories: Unity3D 单元测试
 tags: 
   - Unity3D
   - 单元测试
@@ -9,3 +9,26 @@ tags:
   - NUnit
 ---
 
+### Unity3D 简要介绍
+
+如果是游戏行业的同学估计就没有不知道 Unity3D 的，腾讯的王者荣耀就是基于 Unity3D（简称：U3D）来开发的。在 U3D 中，有三个基本的概念：游戏场景（Scene）、游戏物体（GameObject）和组件（Component）。我们可以借用电影来理解这三个概念，整部电影从开始到结束，由很多场景组成，比如动作电影中的打斗场景在废旧的工厂中进行，废旧的工厂就是游戏场景；废旧工厂中的打斗场景中又由很多的物体组成，比如人、荒废的车床、被吓飞的白鸽等，这些就是游戏物体；废弃的车床又由轮子、各个钢铁部件组成，这里的轮子和部件就是游戏物体的组件。换成 U3D 中的术语就如下图所示:
+
+![](/images/U3DIntro.jpg)
+
+以上就是 U3D 的简要介绍，如果对 U3D 有兴趣但自己又没有基础的，可以去 [SiKi学院](http://www.sikiedu.com/) 上找免费的入门视频来学习，想要看书的话可以去看看《Unity 5.X 从入门到精通》。
+
+### Unity3D 开发环境简要说明
+
+U3D 的开发工具叫 Unity 编辑器，在 [下载地址](https://unity3d.com/cn/get-unity/download/archive) 里选择对应的版本和平台下的 Unity 编辑器即可，比如我这里选择 Windows 平台的最新版本，如截图所示：
+
+![](/images/UnityEditor.jpg)
+
+U3D 目前只推荐使用 C# 作为脚本开发语言，为了方便编写和调试代码通常不直接使用 Unity 编辑器作为 IDE，我们使用 Microsoft Visual Studio（简称：VS）作为 C# 脚本的开发工具，可以点击 [下载链接](https://visualstudio.microsoft.com/zh-hans/) 下载 VS，具体的安装不再详述。
+
+安装完成 VS 后，打开 Unity 编辑器，在菜单栏上选择 Edit > Preferences...，在弹出的 Unity Preferences 对话框中选择 External Tools > External Script Editor，最后选择 VS 即可，如下图所示：
+
+![](/images/UnityPreferences.jpg)
+
+到此为止开发环境配置完成。
+
+### TODO
