--- a/source/_posts/项目管理知识总结.md
+++ b/source/_posts/项目管理知识总结.md
@@ -1,699 +1,409 @@
 ---
 layout: posts
-title: 2. Unity3D 结合实际项目实现单元测试
-categories: Unity3D 单元测试
+title: 项目管理知识总结
+categories: 项目管理
 tags: 
-  - Unity3D
-  - 单元测试
-  - NUnit
-  - 状态机
-  - C#
+  - 项目管理
 ---
 
-### 被测项目背景介绍
-
-这里只介绍项目中的一个 UI 模块。如下图所示，在整个 UI 模块中有很多子模块，在业务上各个子 UI 模块之间会经常需要来回切换。那么如何去实现该功能呢？在频繁的 UI 状态切换中又如何保证其正确性呢？
-
-![](/images/Unity3D/CoreUI.jpg)
-
-#### 状态机的概念
-
-答案就是：状态机。举个例子来帮助大家了解状态机的含义。每个上班族大概每天要干的事就是：早上起来去上班、到下班时间下班回家、困了累了上床睡觉。那么上班族一天的状态就有：上班、下班、睡觉；状态的转换条件有：早上会去上班、晚上下班、12点后睡觉；触发状态的转换条件有：到早上了就起床去上班、到晚上了就下班、12点了就睡觉。
-
-![](/images/Unity3D/StateChartDemo.jpg)
-
-#### 项目中的状态机
-
-根据我们对状态机的理解，假设在项目中 UI 子模块有三个：老弱帮扶专题、智慧人房专题和视频监控专题，那么它的状态机（包括各个状态及其转换条件）可以用下图表示：
-
-![](/images/Unity3D/UIStateChart.jpg)
-
-### EditMode 模式下的测试
-
-#### 被测函数说明
-
-其实上面 UI 各个专题状态的转换，有个核心函数，它的流程图大致如下：
-
-![](/images/Unity3D/ChangeToFunc.jpg)
-
-对应的实际代码如下所示：
-
-```asp
- public void ChangeTo(string type)
-        {
-            string lastID = string.Empty;
-            this.GetLastID(ref lastID);
-            if(type == lastID)
-            {
-                this.EndAllStates();
-            }
-            else
-            {
-                var entry = m_entries.TryGetNullableValue(type);
-                if(entry != null)
-                {
-                    this.EndAllStates();
-                    this.AddState(entry);
-                }
-            }
-        }
-```
-
-#### 测试用例设计
-
-针对这个核心函数，对其进行测试用例设计：
-1. 点击某个状态，且上一状态为空；
-2. 点击某个状态，且与上一状态相同；
-3. 点击某个状态，且与上一状态不相同；
-4. 点击某个状态，但状态为Null；
-5. 点击某个状态，但状态未注册。
-
-然后编写测试代码：
-
-##### 1~3 条测试用例代码
-1. 1~3 测试用例代码如下所示：
-
-```asp
-using System.Collections.Generic;
-using UnityEngine;
-using Module.FSM;
-using InternalModule.FSM;
-
-using NUnit.Framework;
-using Assets.UnitTest.Utils;
-//using NSubstitute;
-
-namespace Assets.UnitTest.Editor.EditeModeTestDemo
-{
-    [TestFixture]
-    class ThemeEntryManagerNormalTest
-    {
-        ThemeEntryManager entryManager;
-        List<FSMState<string>> themeStates;
-        Dictionary<string, ThemeEntry> themeEntries;
-        ThemeEntry themeEntryTest1Instance;
-        ThemeEntry themeEntryTest1;
-        string type1;
-        string lastID;
-
-        [SetUp]
-        public void SetUp()
-        {
-            type1 = "ThemeEntry1";
-            themeEntryTest1 = ThemeEntry.Create(type1, "test1", new GameObject("test1"));
-            entryManager = ThemeEntryManager.Instance;
-            //注册ThemeEntry
-            entryManager.SetEntry(type1, themeEntryTest1);
-
-            themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            themeEntryTest1Instance = themeEntries.TryGetNullableValue(type1);
-            lastID = null;
-            entryManager.GetLastID(ref lastID);
-
-            //校验是否注册成功，上一状态是否为空
-            Assert.IsFalse(themeStates.Contains(themeEntryTest1));
-            Assert.IsTrue(themeEntryTest1 == themeEntryTest1Instance);
-            Assert.IsNull(lastID);
-
-            //模拟点击，初始化数据
-            entryManager.ChangeTo(type1);
-            entryManager.GetLastID(ref lastID);
-            themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            themeEntryTest1Instance = themeEntries.TryGetNullableValue(type1);
-
-            //校验当前状态是否切换成功，是否成功转为上一状态
-            Assert.IsTrue(string.Equals(type1, lastID));
-            Assert.AreEqual(1, themeStates.Count);
-            Assert.IsTrue(themeStates.Contains(themeEntryTest1));
-            Assert.IsTrue(themeEntryTest1 == themeEntryTest1Instance);
-        }
-        [TearDown]
-        public void TearDown()
-        {
-            Object.DestroyImmediate(ThemeEntryManager.Instance);
-        }
-
-        [TestCase]
-        [Description("点击某个状态，且上一状态为空")]
-        public void ChangeThemeEntryStatusButLastThemeEntryStatusIsNullTest()
-        {
-            //set SetUp();
-        }
-        [TestCase]
-        [Description("点击某个状态，且与上一状态相同")]
-        public void ChangeThemeEntryStatusCurrentThemeEntryStatusIsSameAsTheLastStatusTest()
-        {
-            //模拟与上一状态一样时的点击
-            entryManager.ChangeTo(type1);
-            entryManager.GetLastID(ref lastID);
-            themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            themeEntryTest1Instance = themeEntries.TryGetNullableValue(type1);
-
-            //校验状态是否回到初始状态
-            Assert.IsTrue(string.Equals(type1, lastID));
-            Assert.AreEqual(0, themeStates.Count);          
-            Assert.IsTrue(themeEntryTest1 == themeEntryTest1Instance);
-        }
- 
-        [TestCase]
-        [Description("点击某个状态，且与上一状态不相同")]  
-        public void ChangeThemeEntryStatusCurrentThemeEntryStatusIsDifferentTheLastStatusTest()
-        {
-            string type2 = "ThemeEntryTwo";
-            ThemeEntry themeEntryTest2 = ThemeEntry.Create(type2, "test2", new GameObject("test2"));        
-            //注册ThemeEntry
-            entryManager.SetEntry(type2, themeEntryTest2);
-
-            //模拟与上一状态不一样时的点击
-            entryManager.ChangeTo(type2);
-            entryManager.GetLastID(ref lastID);
-            themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            ThemeEntry themeEntryTest2Instance = themeEntries.TryGetNullableValue(type2);
-
-            //校验状态是否回到初始状态
-            Assert.IsTrue(string.Equals(type2, lastID));
-            Assert.AreEqual(1, themeStates.Count);
-            Assert.IsTrue(themeStates.Contains(themeEntryTest2));
-            Assert.IsTrue(themeEntryTest2 == themeEntryTest2Instance);
-        }  
-    }
-}
-```
-
-##### 4~5 条测试用例代码
-2. 4~5 测试用例代码如下所示：
-
-```asp
-using System.Collections.Generic;
-using UnityEngine;
-using Module.FSM;
-using InternalModule.FSM;
-
-using NUnit.Framework;
-using Assets.UnitTest.Utils;
-//using NSubstitute;
-
-namespace Assets.UnitTest.Editor.EditeModeTestDemo
-{
-    [TestFixture]
-    class ThemeEntryManagerAbnormalTest
-    {    
-        [TearDown]
-        public void TearDown()
-        {
-            Object.DestroyImmediate(ThemeEntryManager.Instance);
-        }
-
-        [TestCase]
-        [Description("点击某个状态，但状态为Null")]
-        public void ChangeThemeEntryStatusButTheThemeEntryStatusIsNullTest()
-        {
-            string type1 = null ;
-            //string type1 = string.Empty ;
-            ThemeEntryManager.Instance.ChangeTo(type1);
-
-            ThemeEntryManager entryManager = ThemeEntryManager.Instance;
-            string lastID = null;
-            entryManager.GetLastID(ref lastID);
-            List<FSMState<string>> themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            Dictionary<string, ThemeEntry> themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            ThemeEntry themeEntryTest1Instance = themeEntries.TryGetNullableValue(type1);
-
-            Assert.AreEqual(0, themeStates.Count);
-            Assert.IsNull(lastID);
-            Assert.IsNull(themeEntryTest1Instance);
-        }
-
-        [TestCase]
-        [Description("点击某个状态，但状态未注册")]
-        public void ChangeThemeEntryStatusButTheThemeEntryStatusNoRegisteredTest()
-        {
-            string type1 = "ThemeEntry1";
-            ThemeEntryManager.Instance.ChangeTo(type1);
-
-            ThemeEntryManager entryManager = ThemeEntryManager.Instance;
-            string lastID = null;
-            entryManager.GetLastID(ref lastID);
-            List<FSMState<string>> themeStates = ReflectionUtils
-              .CallPrivateField<List<FSMState<string>>>(ThemeEntryManager.Instance, "m_subStates", null);
-            Dictionary<string, ThemeEntry> themeEntries = ReflectionUtils
-                .CallPrivateField<Dictionary<string, ThemeEntry>>(ThemeEntryManager.Instance, "m_entries", null);
-            ThemeEntry themeEntryTest1Instance = themeEntries.TryGetNullableValue(type1);
-
-            Assert.AreEqual(0, themeStates.Count);
-            Assert.IsNull(lastID);
-            Assert.IsNull(themeEntryTest1Instance);
-        }    
-    }
-}
-```
-#### 执行测试
-
-##### 测试结果
-
-![](/images/Unity3D/EditModeTestResult.jpg)
-
-##### 测试结果分析
-
-从测试结果可以看出，5 条测试用例都成功了 4 条，失败了 1 条。失败的原因是因为 ChangeTo() 函数对传入的参数没有校验是否为 null 的原因。
-
-### PlayMode 模式的测试
-
-#### 测试用例设计
-
-这里我们以"老弱帮扶"专题为被测试对象，并对其设计测试用例：
-1. 老弱帮扶信息概览；
-2. 统计栏下点击老弱分布开关；
-3. 服务栏下点击数字设备开关；
-4. 分别在统计栏和服务拦下按右上角关闭按钮；	
-5. 在老弱帮扶专题状态下点击其他专题按钮；	
-6. 多次重复点击老弱帮扶专题；
-7. 从其他专题状态下点击老弱帮扶专题。
-
-#### 对应的测试代码
-
-```asp
-using System.Collections;
-using UnityEngine;
-using UnityEngine.UI;
-using Module.UI;
-using Module.FSM;
-using Core;
-
-using NUnit.Framework;
-using UnityEngine.TestTools;
-using Assets.UnitTest.Utils;
-using Assets.UnitTest.PageObject;
-//using NSubstitute;
-
-namespace Assets.UnitTest.Player
-{
-    class OldWeakThemeTest
-    {
-        public GameObject OldWeakBtn;
-        public GameObject Service;
-        public OldWeakServiceProCtr oldWeakServiceProCtr;
-        bool hasLoaded = false;
-
-        [OneTimeSetUp]
-        public void OnTimeSetUp()
-        {
-            //加载基础场景
-            Module.Controller.SceneResourcesLoad.Instance.LoadScenes();
-
-            UnityEngine.SceneManagement.SceneManager.sceneLoaded += (_scene, _mode) =>
-            {
-                Common.CommonDebug.Log(_scene.name, Color.green);
-                //BasicesScene为最后一个加载的场景
-                if (_scene.name == "BasicsScene")
-                {
-                    hasLoaded = true;
-                    Debug.Log("场景加载完成.");
-                }
-            };
-        }
-
-        [TearDown]
-        public void TearDown()
-        {
-            GameObject oldWeakMenu = GameObject.Find(OldWeakPage.OldWeakMenuPath);
-            if (oldWeakMenu.activeSelf)
-            {
-                GameObject oldWeakMenuCloseBtn = GameObject.Find(OldWeakPage.OldWeakMenuCloseBtn);
-                UserSimulateUtils.Click(oldWeakMenuCloseBtn);
-            }
-        }
-
-        [UnityTest]
-        //[Timeout(1000000)]
-        [Description("老弱帮扶信息概览")]
-        public IEnumerator OldWeakInfoOverviewTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //点击老弱帮扶专题按钮       
-            clickOldWeakThemeBtn();
-
-            bool isTrue = checkStatisticsState();
-            bool isFalse = checkServiceState();
-            Assert.IsTrue(isTrue);
-            Assert.IsFalse(isFalse);
-
-            //统计栏和服务栏重复点击
-            for (int i = 0; i < 2; i++)
-            {
-                //点击OldWeakBtn后，默认切换到统计栏
-                clickServiceBtn();
-                isTrue = checkServiceState();
-                isFalse = checkStatisticsState();
-                Assert.IsTrue(isTrue);
-                Assert.IsFalse(isFalse);             
-
-                clickStatisticsBtn();
-                isTrue = checkStatisticsState();
-                isFalse = checkServiceState();
-                Assert.IsTrue(isTrue);
-                Assert.IsFalse(isFalse);
-            }           
-        }
-
-        [UnityTest]
-        [Description("统计栏下点击老弱分布开关")]
-        public IEnumerator ClickOldWeakDistributionSwitchTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //点击老弱帮扶专题按钮，默认老弱分布开关打开 
-            clickOldWeakThemeBtn();
-            yield return null;
-            bool isTrue = checkOldWeakDistributionState();
-            Assert.IsTrue(isTrue);
-
-            for (int i = 1; i <= 4; i++)
-            {
-                if (i % 2 == 0)
-                {
-                    //点偶数次，老弱分布开关打开
-                    clickOldWeakDistributionBtn();
-                    yield return null;
-                    isTrue = checkOldWeakDistributionState();
-                    Assert.IsTrue(isTrue);
-                }
-                else 
-                {
-                    //点奇数次，老弱分布开关关闭
-                    clickOldWeakDistributionBtn();
-                    yield return null;
-                    bool isFalse = checkOldWeakDistributionState();
-                    Assert.IsFalse(isFalse);
-                }
-            }
-        }
-
-        [UnityTest]
-        [Description("服务栏下点击数字设备开关")]
-        public IEnumerator ClickDigitalDeviceSwitchTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //点击老弱帮扶专题按钮,然后再点击服务按钮，切换到服务栏下 
-            clickOldWeakThemeBtn();
-            yield return null;
-            clickServiceBtn();
-            yield return null;
-            bool isTrue = checkDigitalDeviceState();
-            Assert.IsTrue(isTrue);
-
-            for (int i = 1; i <= 4; i++)
-            {
-                if (i % 2 == 0)
-                {
-                    //点偶数次，数字设备开关打开
-                    clickDigitalDeviceBtn();
-                    yield return null;
-                    isTrue = checkDigitalDeviceState();
-                    Assert.IsTrue(isTrue);
-                }
-                else
-                {
-                    //点奇数次，数字设备开关关闭
-                    clickDigitalDeviceBtn();
-                    yield return null;
-                    bool isFalse = checkDigitalDeviceState();
-                    Assert.IsFalse(isFalse);
-                }
-            }
-        }
-
-        [UnityTest]
-        [Description("分别在统计栏和服务拦下按右上角关闭按钮")]
-        public IEnumerator ClickCloseBtnInStatisticsAndServiceTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //统计栏下按右上角关闭按钮
-            clickOldWeakThemeBtn();
-            yield return null;
-            clickCloseBtn();
-            yield return null;
-            bool isfalse = checkOldWeakMenuState();
-            Assert.IsFalse(isfalse);
-
-            //在服务拦下按右上角关闭按钮
-            clickOldWeakThemeBtn();
-            yield return null;
-            clickServiceBtn();
-            yield return null;
-            clickCloseBtn();
-            yield return null;
-            isfalse = checkOldWeakMenuState();
-            Assert.IsFalse(isfalse);
-        }
-
-        [UnityTest]
-        [Description("在老弱帮扶专题状态下点击其他专题按钮")]
-        public IEnumerator ClickOtherThemeInOldWeakStateTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //在老弱帮扶的统计栏下点击其他专题
-            clickOldWeakThemeBtn();
-            yield return null;
-            clickOtherThemeBtn();
-            yield return null;
-            bool isfalse = checkOldWeakMenuState();
-            Assert.IsFalse(isfalse);
-            bool isTrue = checkOtherThemeMenuState();
-            Assert.IsTrue(isTrue);
-
-            //在老弱帮扶的服务栏下点击其他专题
-            clickOldWeakThemeBtn();
-            yield return null;
-            clickServiceBtn();
-            yield return null;
-            isTrue = checkServiceState();
-            Assert.IsTrue(isTrue);       
-            clickOtherThemeBtn();
-            yield return null;
-            isfalse = checkOldWeakMenuState();
-            Assert.IsFalse(isfalse);
-            isTrue = checkOtherThemeMenuState();
-            Assert.IsTrue(isTrue);
-        }
-
-        [UnityTest]
-        [Description("多次重复点击老弱帮扶专题")]
-        public IEnumerator RepeatedlyClickOldWeakThemeTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //多次重复点击老弱帮扶专题
-            for (int i = 1; i <= 10; i++)
-            {
-                clickOldWeakThemeBtn();
-                yield return null;
-                bool isOn = checkOldWeakMenuState();
-                if (i % 2 == 0)
-                    Assert.IsFalse(isOn);
-                else
-                    Assert.IsTrue(isOn);
-            }
-        }
-
-        [UnityTest]
-        [Description("从其他专题状态下点击老弱帮扶专题")]
-        public IEnumerator ClickOldWeakThemeInOtherThemeTest()
-        {
-            //等待场景加载完成
-            while (hasLoaded == false)
-            {
-                Debug.Log("场景还没加载完成.");
-                yield return null;
-            }
-
-            //从其他专题状态下点击老弱帮扶专题
-            clickOtherThemeBtn();
-            yield return null;
-            bool isTrue = checkOtherThemeMenuState();
-            bool isFalse = checkOldWeakMenuState();
-            Assert.IsTrue(isTrue);
-            Assert.IsFalse(isFalse);
-            clickOldWeakThemeBtn();
-            yield return null;
-            isTrue = checkOldWeakMenuState();
-            isFalse = checkOtherThemeMenuState();
-            Assert.IsTrue(isTrue);
-            Assert.IsFalse(isFalse);
-        }
-
-        //点击老弱帮扶专题按钮       
-        private bool clickOldWeakThemeBtn()
-        {
-            OldWeakBtn = GameObject.Find(OldWeakPage.OldWeakBtnPath);
-            if (OldWeakBtn)
-            {
-                UserSimulateUtils.Click(OldWeakBtn);
-                return true;
-            }
-            return false;
-        }
-
-        //点击老弱帮扶菜单的统计按钮
-        private void clickStatisticsBtn()
-        {
-            GameObject statistics = GameObject.Find(OldWeakPage.StatisticsPath);
-            if (statistics)
-            {
-                UserSimulateUtils.Click(statistics);
-            }
-        }
-
-        //点击老弱帮扶菜单的服务按钮
-        private void clickServiceBtn()
-        {
-            GameObject service = GameObject.Find(OldWeakPage.ServicePath);
-            if (service)
-            {
-                UserSimulateUtils.Click(service);
-            }
-        }
-
-        //点击老弱帮扶菜单的关闭按钮
-        private void clickCloseBtn()
-        {
-            GameObject closeBtn = GameObject.Find(OldWeakPage.OldWeakMenuCloseBtn);
-            if (closeBtn)
-            {
-                UserSimulateUtils.Click(closeBtn);
-            }
-        }
-
-        //点击老弱帮扶专题统计栏下的老弱分布按钮
-        private void clickOldWeakDistributionBtn()
-        {
-            GameObject closeBtn = GameObject.Find(OldWeakPage.OldWeakDistributionPath);
-            if (closeBtn)
-            {
-                bool b = UserSimulateUtils.Click(closeBtn);    
-            }
-        }
-
-        //点击老弱帮扶专题服务栏下的数字设备按钮
-        private void clickDigitalDeviceBtn()
-        {
-            GameObject closeBtn = GameObject.Find(OldWeakPage.DigitalDevicePath);
-            if (closeBtn)
-            {
-                UserSimulateUtils.Click(closeBtn);
-            }
-        }
-
-        //点击其他主题按钮
-        private void clickOtherThemeBtn()
-        {
-            GameObject otherThemeBtn = GameObject.Find(OldWeakPage.OtherThemeBtnPath);
-            if (otherThemeBtn)
-            {
-                UserSimulateUtils.Click(otherThemeBtn);
-            }
-        }
-
-        //检查当前是否在统计状态
-        private bool checkStatisticsState()
-        {
-            GameObject statistics = GameObject.Find(OldWeakPage.StatisticsPath);
-            Toggle statisticsToggle = statistics.GetComponent<Toggle>();
-            return statisticsToggle.isOn; 
-        }
-
-        //检查当前是否在服务状态
-        private bool checkServiceState()
-        {
-            GameObject service = GameObject.Find(OldWeakPage.ServicePath);
-            Toggle serviceToggle = service.GetComponent<Toggle>();
-            return serviceToggle.isOn;
-        }
-
-        //检查老弱分布的状态
-        private bool checkOldWeakDistributionState()
-        {
-            GameObject building = GameObject.Find(OldWeakPage.BuildingPath);
-            return building.activeSelf;
-        }
-
-        //检查数字设备的状态
-        private bool checkDigitalDeviceState()
-        {
-            GameObject projection = GameObject.Find(OldWeakPage.OldWeakServiceProjectionPath);
-            return projection.activeSelf;
-        }
-
-        //检查老弱帮扶菜单的状态
-        private bool checkOldWeakMenuState()
-        {
-            GameObject oldWeakMenu = GameObject.Find(OldWeakPage.OldWeakMenuPath);
-            return oldWeakMenu.activeSelf;
-        }
-
-        //检查其他主题的状态
-        private bool checkOtherThemeMenuState()
-        {
-            GameObject otherThemeMenu = GameObject.Find(OldWeakPage.OtherThemeMenuPath);
-            return otherThemeMenu.activeSelf;
-        }
-    }
-}
-```
-
-#### 执行测试
-
-![](/images/Unity3D/PlayModeTestResult.jpg)
-
-### 总结
-
-在 U3D 中进行单元测试，我们是这么定位 Editmode 和 PlayMode 的：EditMode用于模块内的单元测试（与业务无关）；PlayMode用于模拟用户的UI测试（结合业务）。另外关于如何设计测试框架，如何编写测试用例，如何才能方便后续代码的维护等等问题就是以后要考虑的问题了。
+### 引论
+项目管理的五大过程组和十大知识领域是核心知识点，本篇文章主要对此进行总结。每个项目或阶段都可以按启动、规划、执行、监控、收尾划分，中间会涉及整合管理、范围管理、进度管理、成本管理、质量管理、资源管理、沟通管理、风险管理、采购管理、相关方管理，其中各个知识领域又包括 49 个过程，详情如下表所示。
 
+十大知识领域 | 启动过程组(2) | 规划过程组(24)	| 执行过程组(10) | 监控过程组(12) | 收尾过程组(1)
+-|-|-|-|-
+4 整合管理 | 4.1 制定项目章程	| 4.2 制定项目管理计划 | 4.3 指导与管理项目工作<br>4.4 管理项目知识	| 4.5 监控项目工作<br>4.6 实施整体变更控制 | 4.7 结束项目或阶段
+5 范围管理 | | 5.1 规划范围管理<br>5.2 收集需求<br>5.3 定义范围<br>5.4 创建 WBS | | 5.5 确认范围<br>5.6 控制范围	|
+6 进度管理 | | 6.1 规划进度管理<br>6.2 定义活动<br>6.3 排列活动顺序<br>6.4 估算活动持续时间<br>6.5 制定进度计划 | | 6.6 控制进度 |
+7 成本管理 | | 7.1 规划成本管理<br>7.2 估算成本<br>7.3 制定预算 | | 7.4 控制成本 |
+8 质量管理 | | 8.1 规划质量管理 | 8.2 管理质量 | 8.3 控制质量 |
+9 资源管理 | | 9.1 规划资源管理<br>9.2 估算活动资源<br>9.3 获取资源 | 9.4 建设团队<br>9.5 管理团队 | 9.6 控制资源 |
+10 沟通管理 | | 10.1 规划沟通管理 | 10.2 管理沟通 | 10.3 监督沟通 |
+11 风险管理 | | 11.1 规划风险管理<br>11.2 识别风险<br>11.3 实施定性风险分析<br>11.4 实施定量风险分析<br>11.5 规划风险应对 |11.6 实施风险应对 | 11.7 监督风险 |	
+12 采购管理| |12.1 规划采购	| 12.2 实施采购	| 12.3 控制采购	|
+13 相关方管理 | 13.1 识别相关方 | 13.2 规划相关方参与 | 13.3 管理相关方 | 13.4 监督相关方 |
+
+从五大过程组来看，启动过程组只包含两个过程（制定项目章程和识别相关方）。项目章程的主要作用就是批准项目成立和授权项目经理，相当于古时候的委任状，意思就是这个可以做了，然后就交给你了；而识别相关方就是记录与项目相关的干系人，从而更好的了解他们的需求和期望，以便更好的管理项目。规划过程组的过程最多，但简而言之实际就是为项目的实施制定管理策略和行动方案。执行过程组便是按照制定的项目管理计划实施、执行的过程。监控过程组就是对执行过程的把控，以保证项目按期交付。最后的收尾过程组便是进行项目或阶段的收尾工作，包括移交可交付成功、总结经验教训等。
+
+### 项目运行环境
+组织过程资产（主观因素）和事业环境（客观因素）。
+
+### 项目经理的角色
+项目经理在领导项目团队达成项目目标方面发挥着至关重要的作用。一般而言，项目经理从项目启动时开始参与项目，直到项目结束；可能会在项目启动之前就参与评估和分析活动，以推进战略目标的实现、提高组织绩效或满足客户需求；可能会协助项目商业分析、商业论证以及项目组合管理事宜；可能还参与后续跟进活动，以实现项目的商业效益。
+
+### 整合管理
+#### 制定项目章程	
+制定项目章程是编写一份正式批准项目并授权项目经理在项目活动中使用组织资源的文件的过程。本过程的主要作用是，明确项目与组织战略目标之间的直接联系，确立项目的正式地位，并展示组织对项目的承诺。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 制定项目管理计划
+制定项目管理计划是定义、准备和协调项目计划的所有组成部分，并把它们整合为一份综合项目管理计划的过程。本过程的主要作用是，生成一份综合文件，用于确定所有项目工作的基础及其执行方式，它仅开展一次或仅在项目的预定义点开展。	
+
+#### 指导与管理项目工作
+指导与管理项目工作是为实现项目目标而领导和执行项目管理计划中所确定的工作，并实施已批准变更的过程。本过程的主要作用是，对项目工作和可交付成果开展综合管理，以提高项目成功的可能性。本过程需要在整个项目期间开展。
+
+#### 管理项目知识	
+管理项目知识是使用现有知识并生成新知识，以实现项目目标，并且帮助组织学习的过程。本过程的主要作用是，利用已有的组织知识来创造或改进项目成果，并且使当前项目创造的知识可用于支持组织运营和未来的项目或阶段。本过程需要在整个项目期间开展。
+
+#### 监控项目工作
+监控项目工作是跟踪、审查和报告整体项目进展，以实现项目管理计划中确定的绩效目标的过程。本过程的主要作用是，让相关方了解项目的当前状态并认可为处理绩效问题而采取的行动，以及通过成本和进度预测，让相关方了解未来项目状态。本过程需要在整个项目期间开展。
+
+#### 实施整体变更控制	
+实施整体变更控制是审查所有变更请求、批准变更，管理对可交付成果、项目文件和项目管理计划的变更，并对变更处理结果进行沟通的过程。本过程审查对项目文件、可交付成果或项目管理计划的所有变更请求，并决定对变更请求的处置方案。本过程的主要作用是确保对项目中已记录在案的变更做综合评审。如果不考虑变更对整体项目目标或计划的影响就开展变更，往往会加剧整体项目风险。本过程需要在整个项目期间开展。
+
+关于变更请求：当客户提起变更时，您应:了解所要求的变更类型，并与团队成员交流以评估变更的含义； 如果存在正式的变更控制机制，请打开变更控制；将变更传达给管理层，并告知客户变更的影响；实施变更，如果被接受；如果提交的变更涉及到行业的法律法规且作为项目合同的一部分，则必须实施变更，朝这一步的第一步是激活变更控制机制。
+
+#### 结束项目或阶段
+结束项目或阶段是终结项目、阶段或合同的所有活动的过程。本过程的主要作用是，存档项目或阶段信息，完成计划的工作，释放组织团队资源以展开新的工作。它仅开展一次或仅在项目的预定义点开展。
+
+可能的项目或阶段的收尾流程：项目发起人或客户验收了可交付成果并已经确认满足项目目标；将可交付成果的所有权转移给指定的干系人，推动项目收尾；向所有干系人分发最终项目报告，提供项目的最终报告；总结经验教训，并更新组织的知识库。通常把项目收尾时组织过程资产的总结和更新叫做行政收尾：包括项目档案、项目或阶段收尾文件、历史信息和经验总结。
+
+### 范围管理
+#### 规划范围管理
+规划范围管理是为记录如何定义、确认和控制项目范围及产品范围，而创建范围管理计划的过程。本过程的主要作用是，在整个项目期间对如何管理范围提供指南和方向。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 收集需求
+收集需求是为实现目标而确定、记录并管理相关方的需要和需求的过程。本过程的主要作用是，为定义产品范围和项目范围奠定基础，且仅开展一次或仅在项目的预定义点开展。
+
+#### 定义范围
+定义范围是制定项目和产品详细描述的过程。本过程的主要作用是，描述产品、服务或成果的边界和验收标准。
+
+定义范围过程会输出项目范围说明书。其内容包括：项目范围描述、验收标准、可交付成果、除外责任、制约因素、假设条件。
+
+#### 创建 WBS	
+创建工作分解结构（WBS）是把项目可交付成果和项目工作分解成较小、更易于管理的组件的过程。本过程的主要作用是，为所要交付的内容提供架构，它仅开展一次或仅在项目的预定义点开展。	
+
+创建WBS的过程：识别和分析可交付成果及相关工作；确定WBS的结构和编排工作；自上而下逐层细化分解；为WBS组件制定和分配标识编码；核实可交付成果分解的程度是否恰当。 
+
+#### 确认范围
+确认范围是正式验收已完成的项目可交付成果的过程。本过程的主要作用是，使验收过程具有客观性；同时通过确认每个可交付成果，来提高最终产品、服务或成果获得验收的可能性。本过程应根据需要在整个项目期间定期开展。
+
+#### 控制范围
+控制范围是监督项目和产品的范围状态，管理范围基准变更的过程。本过程的主要作用是，在整个项目期间保持对范围基准的维护，且需要在整个项目期间开展。
+
+### 进度管理
+#### 规划进度管理
+规划进度管理是为规划、编制、管理、执行和控制项目进度而制定政策、程序和文档的过程。本过程的主要作用是，为如何在整个项目期间管理项目进度提供指南和方向。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 定义活动
+定义活动是识别和记录为完成项目可交付成果而须采取的具体行动的过程。本过程的主要作用是，将工作包分解为进度活动，作为对项目工作进行进度估算、规划、执行、监督和控制的基础。本过程需要在整个项目期间开展。
+
+#### 排列活动顺序
+排列活动顺序是识别和记录项目活动之间的关系的过程，本过程的主要作用是定义工作之间的逻辑顺序，以便在既定的所有项目制约因素下获得最高的效率。本过程需要在整个项目期间开展。
+
+#### 估算活动持续时间
+估算活动持续时间是根据资源估算的结果，估算完成单项活动所需工作时段数的过程。本过程的主要作用是，确定完成每个活动所需花费的时间量。本过程需要在整个项目期间开展。
+
+#### 制定进度计划
+制定进度计划是分析活动顺序、持续时间、资源需求和进度制约因素，创建进度模型，从而落实项目执行和监控的过程。本过程的主要作用是，为完成项目活动而制定具有计划日期的进度模型。本过程需要在整个项目期间开展。
+
+关键路径法主要是在资源有限的条件下，利用缓冲来应对项目进度的不确定性，保障整体进度。想要有限的资源有效的发挥作用，非得在资源需求和资源供给方面取得平衡，才能根据资源的制约条件有效调增人员分派。		
+
+#### 控制进度
+控制进度是监督项目状态，以更新项目进度和管理进度基准变更的过程。本过程的主要作用是在整个项目期间保持对进度基准的维护，且需要在整个项目期间开展。
+
+
+### 成本管理
+#### 规划成本管理
+规划成本管理是确定如何估算、预算、管理、监督和控制项目成本的过程。本过程的主要作用是，在整个项目期间为如何管理项目成本提供指南和方向。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 估算成本
+估算成本是对完成项目工作所需资源成本进行近似估算的过程。本过程的主要作用是，确定项目所需的资金。本过程应根据需要在整个项目期间定期开展。
+
+#### 制定预算		
+制定预算是汇总所有单个活动或工作包的估算成本，建立一个经批准的成本基准的过程。本过程的主要作用是，确定可据以监督和控制项目绩效的成本基准。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 控制成本
+控制成本是监督项目状态，以更新项目成本和管理成本基准变更的过程。本过程的主要作用是，在整个项目期间保持对成本基准的维护。本过程需要在整个项目期间开展。
+
+### 质量管理
+#### 规划质量管理	
+规划质量管理是识别项目及其可交付成果的质量要求和（或）标准，并书面描述项目将如何证明符合质量要求和（或）标准的过程。本过程的主要作用是，为在整个项目期间如何管理和核实质量提供指南和方向。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 管理质量	
+管理质量是把组织的质量政策用于项目，并将质量管理计划转化为可执行的质量活动的过程。本过程的主要作用是，提高实现质量目标的可能性，以及识别无效过程和导致质量低劣的原因。管理质量使用控制质量过程的数据和结果向相关方展示项目的总体质量状态。本过程需要在整个项目期间开展。
+
+质量审计是用来确定项目活动是否遵循了组织和项目的政策、过程与程序。质量方针又叫质量政策。它是企业总的质量宗旨和质量方向，是统一和协调企业质量工作的行动指南。质量方针是由组织机构的最高管理者正式发布的该组织总的质量宗旨和方向。如果组织中没有，项目经理应该带领团队制作一份。
+
+#### 控制质量
+控制质量是为了评估绩效，确保项目输出完整、正确且满足客户期望，而监督和记录质量管理活动执行结果的过程。本过程的主要作用是，核实项目可交付成果和工作已经达到主要相关方的质量要求，可供最终验收。控制质量过程确定项目输出是否达到预期目的，这些输出需要满足所有适用标准、要求、法规和规范。本过程需要在整个项目期间开展。
+
+### 资源管理
+#### 规划资源管理
+规划资源管理是定义如何估算、获取、管理和利用团队以及实物资源的过程。本过程的主要作用是，根据项目类型和复杂程度确定适用于项目资源的管理方法和管理程度。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 估算活动资源	
+估算活动资源是估算执行项目所需的团队资源，以及材料、设备和用品的类型和数量的过程。本过程的主要作用是，明确完成项目所需的资源种类、数量和特性。本过程应根据需要在整个项目期间定期开展。
+
+#### 获取资源
+获取资源是获取项目所需的团队成员、设施、设备、材料、用品和其他资源的过程。本过程的主要作用是，概述和指导资源的选择，并将其分配给相应的活动。本过程应根据需要在整个项目期间定期开展。
+
+#### 建设团队
+建设团队是提高工作能力，促进团队成员互动，改善团队整体氛围，以提高项目绩效的过程。本过程的主要作用是，改进团队协作、增强人际关系技能、激励员工、减少摩擦以及提升整体项目绩效。本过程需要在整个项目期间开展。
+
+#### 管理团队	
+管理团队是跟踪团队成员工作表现，提供反馈，解决问题并管理团队变更，以优化项目绩效的过程。本过程的主要作用是，影响团队行为、管理冲突以及解决问题。本过程需要在整个项目期间开展。
+
+冲突解决方法：撤退/回避（从实际或潜在冲突中退出，将问题推迟到准备充分的时候，或者将问题推给其他人员解决）；缓和/包容（强调一致而非差异；为维持和谐与关系而退让一步，考虑其他方的需要）；妥协/调解（为了暂时或部分解决冲突，寻找能让各方都在一定程度上满意的方案，但这种方法有时会导致“双输”局面）；强迫/命令（以牺牲其他方为代价，推行某一方的观点；只提供赢 — 输方案。通常是利用权力来强行解决紧急问题，这种方法通常会导致“赢输”局面）；合作/解决问题（综合考虑不同的观点和意见，采用合作的态度和开放式对话引导各方达成共识和承诺，这种方法可以带来双赢局面）。
+
+#### 控制资源
+控制资源是确保按计划为项目分配实物资源，以及根据资源使用计划监督资源实际使用情况，并采取必要纠正措施的过程。本过程的主要作用是，确保所分配的资源适时适地可用于项目，且在不再需要时被释放。本过程需要在整个项目期间开展。
+
+### 沟通管理
+#### 规划沟通管理	
+规划沟通管理是基于每个相关方或相关方群体的信息需求、可用的组织资产，以及具体项目的需求，为项目沟通活动制定恰当的方法和计划的过程。本过程的主要作用是，为及时向相关方提供相关信息，引导相关方有效参与项目，而编制书面沟通计划。本过程应根据需要在整个项目期间定期开展。
+
+#### 管理沟通	
+管理沟通是确保项目信息及时且恰当地收集、生成、发布、存储、检索、管理、监督和最终处置的过程。本过程的主要作用是，促成项目团队与相关方之间的有效信息流动。本过程需要在整个项目期间开展。
+
+#### 监督沟通
+监督沟通是确保满足项目及其相关方的信息需求的过程。本过程的主要作用是，按沟通管理计划和相关方参与计划的要求优化信息传递流程。本过程需要在整个项目期间开展。
+
+### 风险管理
+#### 规划风险管理
+规划风险管理是定义如何实施项目风险管理活动的过程。本过程的主要作用是，确保风险管理的水平、方法和可见度与项目风险程度，以及项目对组织和其他相关方的重要程度相匹配。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 识别风险
+识别风险是识别单个项目风险以及整体项目风险的来源，并记录风险特征的过程。本过程的主要作用是，记录现有的单个项目风险，以及整体项目风险的来源；同时，汇集相关信息，以便项目团队能够恰当应对已识别的风险。本过程需要在整个项目期间开展。
+
+#### 实施定性风险分析
+实施定性风险分析是通过评估单个项目风险发生的概率和影响以及其他特征，对风险进行优先级排序，从而为后续分析或行动提供基础的过程。本过程的主要作用是重点关注高优先级的风险。本过程需要在整个项目期间开展。
+
+#### 实施定量风险分析
+实施定量风险分析是就已识别的单个项目风险和不确定性的其他来源对整体项目目标的影响进行定量分析的过程。本过程的主要作用是，量化整体项目风险敞口，并提供额外的定量风险信息，以支持风险应对规划。本过程并非每个项目必需，但如果采用，它会在整个项目期间持续开展。
+
+风险定量分析是针对项目总体目标影响大的风险进行分析。
+
+#### 规划风险应对	
+规划风险应对是为处理整体项目风险敞口，以及应对单个项目风险，而制定可选方案、选择应对策略并商定应对行动的过程。本过程的主要作用是，制定应对整体项目风险和单个项目风险的适当方法；本过程还将分配资源，并根据需要将相关活动添加进项目文件和项目管理计划。本过程需要在整个项目期间开展。
+
+**威胁应对策略**有：**上报**（该威胁超出了项目经理的权限，就采取上报策略）、**规避**（通过改变项目管理计划以完全消除风险发生的条件，比如：延长进度、改变策略、缩减范围 、取消项目）、**转移**（将风险的后果连同对应的责任转移给第三方，比如：买保险、担保书、保证书）、**减轻**（降低不理风险发生的概率、后果，比如：原型试验、更多测试、稳定供应商、简单的流程和工序）、**接受**（承认风险的存在，但不主动采取措施）。
+
+**机会应对策略**有：**上报**（该威胁超出了项目经理的权限，就采取上报策略）、**开拓**（如果组织想确保把握住高优先级的机会，有采取开拓策略）、**分享**（将应对机会的责任转移给第三方，比如：建立合作关系、合作团队、合资企业分享机会）、**提高**（提高机会出现的概率，比如为早日完成活动而增加资源）、**接受**（承认风险的存在，但不主动采取措施）。
+
+#### 实施风险应对	
+实施风险应对是执行商定的风险应对计划的过程。本过程的主要作用是，确保按计划执行商定的风险应对措施，来管理整体项目风险敞口、最小化单个项目威胁，以及最大化单个项目机会。本过程需要在整个项目期间开展。
+
+#### 监督风险
+监督风险是在整个项目期间，监督商定的风险应对计划的实施、跟踪已识别风险、识别和分析新风险，以及评估风险管理有效性的过程。本过程的主要作用是，使项目决策都基于关于整体项目风险敞口和单个项目风险的当前信息。本过程需要在整个项目期间开展。
+
+### 采购管理
+#### 规划采购	
+规划采购管理是记录项目采购决策、明确采购方法，及识别潜在卖方的过程。本过程的主要作用是，确定是否从项目外部获取货物和服务，如果是，则还要确定将在什么时间、以什么方式获取什么货物和服务。货物和服务可从执行组织的其他部门采购，或者从外部渠道采购。本过程仅开展一次或仅在项目的预定义点开展。
+
+#### 实施采购	
+实施采购是获取卖方应答、选择卖方并授予合同的过程。本过程的主要作用是，选定合格卖方并签署关于货物或服务交付的法律协议。本过程的最后成果是签订的协议，包括正式合同。本过程应根据需要在整个项目期间定期开展。
+
+#### 控制采购
+控制采购是管理采购关系，监督合同绩效，实施必要的变更和纠偏，以及关闭合同的过程。本过程的主要作用是，确保买卖双方履行法律协议，满足项目需求。本过程应根据需要在整个项目期间开展。
+
+### 相关方管理
+#### 识别相关方	
+识别相关方是定期识别项目相关方，分析和记录他们的利益、参与度、相互依赖性、影响力和对项目成功的潜在影响的过程。本过程的主要作用是，使项目团队能够建立对每个相关方或相关方群体的适度关注。本过程应根据需要在整个项目期间定期开展。
+
+#### 规划相关方参与	
+规划相关方参与是根据相关方的需求、期望、利益和对项目的潜在影响，制定项目相关方参与项目的方法的过程。本过程的主要作用是，提供与相关方进行有效互动的可行计划。本过程应根据需要在整个项目期间定期开展。
+
+#### 管理相关方	
+管理相关方参与是与相关方进行沟通和协作以满足其需求与期望、处理问题，并促进相关方合理参与的过程。本过程的主要作用是，让项目经理能够提高相关方的支持，并尽可能降低相关方的抵制。本过程需要在整个项目期间开展。
+
+#### 监督相关方
+监督相关方参与是监督项目相关方关系，并通过修订参与策略和计划来引导相关方合理参与项目的过程。本过程的主要作用是，随着项目进展和环境变化，维持或提升相关方参与活动的效率和效果。本过程需要在整个项目期间开展。
+
+### 易混淆概念解析
+
+#### 管理质量、控制质量
+**管理质量**（关注过程）的关键词：信心、宏观、过程、审计、持续改进、（不）增值活动/无效活动；
+
+**控制质量**（关键具体的问题）的关键词：不良、测试、工作包、满足客户期望、检查、核对、核实、核查。
+
+#### 建设团队、管理团队
+**建设团队**是提高工作能力，促进团队成员互动，改善团队整体氛围，以提高项目绩效的过程；
+
+**管理团队**（本质是监督团队）的主要作用是影响团队行为、管理冲突以及解决问题。
+
+#### 管理沟通、监督沟通
+**管理沟通**主要作用促成项目团队与相关方之间的有效信息流动；
+
+**监督沟通**主要作用按沟通管理计划和相关方参与计划的要求优化信息传递流程。
+
+#### 规划采购、实施采购
+**规划采购管理**是记录项目采购决策、明确采购方法，及识别潜在卖方的过程。
+
+**实施采购**是获取卖方应答、选择卖方并授予合同的过程（实施采购可以理解为就是招投标会议）。
+
+#### 管理相关方、监督相关方
+**管理相关方参与**是为了满足相关方的需要而与之沟通和协作，并解决所发生的问题的过程；
+
+**监督相关方参与**是监督相关相关方关系，并通过修订参与策略和计划来引导相关方参与项目的过程。
+
+#### 沟通管理、相关方管理
+一个是信息管理，一个是人的参与。注意区分是信息问题还是人员的支持抵制问题就不会混淆。项目中所有信息的发布、传递都是沟通问题。沟通的本质是信息交互。通知相关方的依据是沟通管理计划。
+
+#### 商业论证、工作说明书、项目章程、项目范围说明书
+**商业论证**（决定项目做或不做）：进行企业需求和成本效益分析以论证项目的合理性并确定项目边界。
+
+**工作说明书**(也叫SOW，是制定项目章程的输入文件)包括：业务需求、产品范围描述和战略目的。如果项目是从外部引入，其就是采购工作说明书。
+
+**项目章程**的内容：三总（总体制约因素、总体里程碑计划、总体预算），三高（高层级项目描述、高层级需求、高层级风险），三项（项目目的、项目审批要求、项目目标），三人（发起人、项目经理、相关方）。它是高层级的概括。
+
+**项目范围说明书**的内容： 项目范围描述、验收标准、可交付成果、除外责任、制约因素、假设条件。是定义范围过程的输出，是具体的项目范围说明。
+
+#### 工作绩效数据、工作绩效信息、工作绩效报告
+**工作绩效数据**在执行项目工作的过程中，从每个正在执行的活动中收集到的原始观察结果和测量值。例如包括工作完成百分比、质量和技术绩效测量结果、进度计划活动的开始和结束日期、变更请求的数量、缺陷的数量、实际成本和实际持续时间等。项目数据通常记录在项目管理信息系统(PMIS)和项目文件中；
+
+**工作绩效信息**从各控制过程收集，并结合相关背景和跨领域关系进行整合分析而得到的绩效数据，绩效信息的例子包括可交付成果的状态、变更请求的落实情况及预测的完工尚需估算；
+
+**工作绩效报告**为制定决策、提出问题、采取行动或引起关注，而汇编工作绩效信息所形成的实物或电子项目文件。例如包括状况报告、备忘录、论证报告、信息札记、电子仪表盘、推荐意见和情况更新。
+
+执行阶段的指导与管理项目工作输出工作绩效数据，它是原始的数据；监督项目工作输出工作绩效报告，管理质量输出质量报告，识别风险输出风险报告；控制范围、确认范围、控制进度、控制成本、控制质量、控制资源、监督沟通、监督风险、控制采购、监督相关方参与、输出工作绩效信息。
+
+#### 可交付成果、核实的可交付成果、验收的可交付成果
+指导与管理项目工作过程输出**可交付成果**；
+
+控制质量过程输出**核实的可交付成果**；
+
+确认范围输出**验收的可交付成果**；
+
+最后在收尾阶段将验收的可交付成果移交给客户。
+
+#### 易混淆的工具和技术
+**头脑风暴**也叫集思广益会，通常有一个主持人，只是把各个想法、意见想出来，但并没有做决策。
+
+**德尔菲技术**的特征是背靠背、匿名、旨在取得一致意见。
+
+**焦点小组技术**是围绕焦点问题展开，着重于互动讨论。
+
+**名义小组**是用于刷选头脑风暴会议的结果，着重于结果的刷选。
+
+**引导式研讨会**是着重于形成既定目标的一致意见。
+
+**质量功能展开**的内容：收集客户声音；对客户需求进行分类和排序；为实现客户需求设定目标；确定质量标准。
+
+**联合应用开发**:适用于软件开发行业，这种 研讨会注重把业务主题专家和开发团队集中在一起，以收集和改进软件开发过程。
+
+#### 产品范围和项目范围
+**产品范围**是某项产品、服务或成果所具有的特征和功能。
+
+**项目范围**是为交付具有规定特性与功能的产品、服务或成果而必须完成的工作。项目范围有时也包括产品范围。
+
+产品需求文件是衡量产品范围完成情况的依据，尽管项目管理计划和项目范围说明书中也有产品范围描述，但他们包括的范围太广。工作分解结构只是描述项目范围，产品需求文件最具有针对性。
+
+#### 职能型、弱矩阵型、平衡矩阵型、强矩阵型、项目型
+**职能型矩阵**中，各个部门独立地开展各自部门的工作；
+
+在**弱矩阵型**的组织结构中，项目经理充当项目联络员的角色，没有任何权力；
+
+在**平衡矩阵**中，项目经理具有了一定的权力，但让隶属于职能经理；
+
+在**强矩阵**中，项目经理拥有较大职权，与职能经理平级，但让没有人事权；
+
+**项目型矩阵**中，项目经理的职权最大，高于职能经理，可以全权管理项目和项目资金。
+
+#### 问题日志、风险登记册
+**问题日志**（Issue Log）用于记录和监督问题的解决。它可用来促进沟通，确保对问题的共同理解。问题日志强调的 是 相 关 方 对 项 目 上 的 关 注 和 关 心（concern），这些关注和关心的英文是“Issue”，这些“issue”可能是项目的问题（Problem），也可能是项目的风险（Risk）。PM 在和关键相关方
+沟通时会借助问题日志进行沟通，例如针对这个 issue 已经提出了变更请求，
+或者已经作为风险进行应对了等等，这些都是针对该 issue 的解决措施。
+
+**风险登记册**会记录风险分析和风险应对规划的结果。等风险发生状态发生
+变化时首先需要更新的文件。注意风险Risk 发 生 了 将 会 变 成 项 目 的 问 题（Problem），针对 Problem 往往需要提出变更（change）
+#### 项目组合、项目集、项目
+**项目组合**是指为实现战略目标而协调管理的项目、项目集和子项目组合和运营工作，通常包含各个项目的优先级；
+
+**项目集**是相互关联且被协调管理的项目、子项目集和项目集活动，以便获得分别管理所无法获得的利益。项目集包括所属单个项目范围之外的相关工作，各个项目之间是有关联的；
+
+**项目**管理是针对某一个项目而言的。
+
+#### 项目生命周期、产品生命周期、项目管理生命周期
+**项目生命周期**指项目从开始到完成所经历的一系列，包括：开始项目、组织与准备、执行项目工作、结束项目；
+
+**产品生命周期**与项目生命周期相互独立，前者可能由项目产生。产品生命周期指一个产品从概念、交付、成长、成熟到衰退的整个演变过程的一系列阶段，通常产品生命周期包含一个或多个项目生命周期；
+
+**项目管理生命周期**可以简单理解成五大过程组：启动、规划、执行、监控、收尾。
+
+#### 事业环境因素、组织过程资产
+**事业环境因素**是指项目团队不能控制的，将对项目产生影响、限制或指令作用的各种条件。如：组织文化、结构和治理设施和资源的地理分布、基础设施、信息技术软件、资源可用性、员工能力等；
+
+**组织过程资产**是执行组织所特有并使用的计划、过程、政策、程序和知识库，会影响对具体项目的管理。
+
+#### 运营经理、职能经理、项目经理
+**运营经理**负责保证业务运营的高效性；
+
+**职能经理**专注于某个职能领域或业务部门的管理监督；
+
+**项目经理**由组织委派、领导团队实现项目目标的个人。
+
+#### 配置管理系统、工作授权系统、变更管理系统
+**配置管理系统**描述如何记录和更新项目的特定信息，以及记录和更新哪些信息，以保持产品、服务或成果的一致性、有效性；
+
+**工作授权系统**是由正式文件的若干明确核准项目工作的程序组成，确保该项目工作由明确的组织在正确的时间以恰当的顺序完成；
+
+**变更管理系统**是规定控制、改变和批准项目可交付成果和文件方式的有案可稽的一套正式程序，明确 CCB 的角色和职责，完成变更控制活动，由文字工作、跟踪系统、变更审批层次构成。
+
+#### 领导力、影响力
+**影响力**在矩阵环境中，项目经理对团队成员通常没有或仅有很小的命令职权，所以他们适时影响相关方的能力，对保证项目成功非常关键。影响力主要体现在如下各方面：说服他人、清晰表达观点和立场、积极且有效的倾听、了解并综合考虑各种观点、收集相关信息，在维护相互信任的关系下，解决问题并达成一致意见；
+
+**领导力**是成功的项目需要强有力的领导技能，领导力是领导团队、激励团队做好本质工作的能力。它包括各种不同的技巧、能力和行动。且领导力在项目生命周期中的所有阶段都很重要。有多种领导力理论，定义了适用于不同情形或团队的领导风格。领导力对沟通愿景及鼓舞项目团队高效工作十分重要。
+
+#### 合同收尾、行政收尾
+**合同收尾**是由买方授权的采购管理员向卖方签发书面确认；
+
+**行政收尾**是发起人或管理层给项目经理签发书面文件，一般合同收尾在行政收尾之前，但合同收尾中包含行政收尾。
+
+#### 需求管理计划、范围管理计划
+**范围管理计划**描述如何管理总体工作范围，包括由卖方负责的工作范围；
+
+**需求管理计划描**述将如何分析、记录和管理需求，它可能还包括卖方将如何管理按协议规定应该实现的需求。
+
+#### 项目进度网络图、横道图、里程碑
+**项目进度网络图**（点）表示活动之间的逻辑关系，是详细的进度计划；
+
+**横道图**（线）是追踪概括性的活动进度；
+
+**里程碑**（面）是项目进展的概括。
+#### 资源平衡、资源平滑
+**资源平衡**通常会导致关键路径边长，如：在同一时间活动A和活动B都需要小明，但是由于资源紧缺，所以项目经理决定要小明干完活动A再来干活动B，这就是资源平衡的策略，但是导致关键路径编长了；
+
+**资源平滑**不会导致关键路径变长，如：本来这个活动需要2个人力的，但是实际只要1个人力。
+
+#### 赶工、快速跟进
+**赶工**通常需要增加资源，比如加班；
+
+**快速跟进**通常会增加项目风险，适合对关联性不强的活动进行快速跟进。
+
+#### 几种资源（人）管理理论
+**Herzberg双因素理论**：保健（物质）因素指工资、主管的态度、工作条件，差的保健因素可能破坏人的积极性，改善保健因素并没有激励人的作用；激励因素指积极的动机来源于体验和实现自我成功的机会，并得到对其能力和成就的承认，员工应有自我发展意识和责任感。
+
+**戴维.麦克利兰成就理论**：认为人工作中工作情境有三种需要（成就需要、权力需要、亲和需要），管理者应该根据各人更重视的需要来制定激励措施。
+
+**Maslow 需求层次理论**：生理需求、安全保障、社会归属、自尊人尊、自我价值，只有前一种实现了才去有上一层次的需要。
+
+**弗鲁姆期望理论**：认为积极性和努力程度，等于所能得到结果的全部预期价值乘以他认为达到该结果的期望概率。
+
+**麦克雷格XY理论**：X理论认为人是消极。懒惰的，设法逃避工作，缺乏进取心；而Y理论则相反，认为人是积极的，愿意工作，愿意进步，愿意承担责任等。传统的管理比较偏向于X理论，现代管理越来越偏向于Y理论。
+
+**威廉.大内Z理论**：认为一切企业的成功离不开信任、敏感与亲密，因此主张以坦白、开放、沟通作为基本原则来实行民主管理。
+
+**亚当斯公平理论**：认为要使组织保持较高的工作热情，必须使工作报酬公平合理，使组织的成员感到组织的分配是公平的。
+
+**光环效应**：对一个事物的好感转移到与该事物相关的其他事物上去。
+
+**号角效应**：员工在某方面表现不好，就认为他在其他方面也表现不佳。
+
+#### 总价合同、工料合同、成本补偿合同
+**总价合同**适合需求清楚、具体的项目；
+
+**工料合同**兼具总价合同和成本补偿合同的特点，通常强调专家、紧迫性和快速；
+
+**成本补偿合同**适合需求不清楚的。
+#### 变更管理流程
+![](/images/PMP/ChangeProcess.jpg)
+
+#### 问题处理流程
+![](/images/PMP/ProblemSolvingProcess.jpg)
+
+#### 项目或阶段收尾流程
+![](/images/PMP/CloseProcess.jpg)
+
+#### 启动会议、开工会议
+**启动会议**（Initiating Meeting）的完成意味着启动过程组的结束，会议主要是授权项目经理并正式启动项目；
+
+**开工会议**（Kick-Off Meeting）的完成也意味着规划过程组的结束，会议主要目的是了解项目计划，使各相关方对项目有公共理解，活动各相关方对项目的承诺，宣告项目进入实施阶段。
