--- a/themes/next/languages/zh-Hans.yml
+++ b/themes/next/languages/zh-Hans.yml
@@ -22,8 +22,8 @@ sidebar:
   toc: 文章目录
 
 post:
-  created: 创建于
-  modified: 更新于
+  #created: 创建于
+  #updated: 更新于
   sticky: 置顶
   posted: 发表于
   in: 分类于
