新增两篇博文

--- a/source/_posts/4. CentOS7安装Python3.md
+++ b/source/_posts/4. CentOS7安装Python3.md
@@ -2,7 +2,7 @@
 date: 2019-05-01 20:13:00
 layout: posts
 title: CentOS7 安装 Python3
-categories: Linux 环境安装
+categories: Python
 tags: 
   - Linux
   - Python
