修改错别字

--- a/source/_posts/6. 容器化部署 Springboot 应用.md
+++ b/source/_posts/6. 容器化部署 Springboot 应用.md
@@ -196,7 +196,7 @@ docker-entrypoint.sh 脚本就很简单了，就是获取到 jar 包，然后通
 
 ### 构建镜像、容器化启动应用
 
-上面我们已经完成 Dockerfile 文件的编写，接下来就简单了，在 Dockerfile 文件的当前目录下执行命令 docker build 即可构建镜像（-t 参数是给镜像起个名字并以 v1 作为 tag 表示）：
+上面我们已经完成 Dockerfile 文件的编写，接下来就简单了，在 Dockerfile 文件的当前目录下执行命令 docker build 即可构建镜像（-t 参数是给镜像起个名字并以 v1 作为 tag 标识）：
 
 ```
 # docker build -t hellospringboot:v1 .
