完成 html 知识总结博文

--- a/source/_posts/6. 容器化部署 Springboot 应用.md
+++ b/source/_posts/6. 容器化部署 Springboot 应用.md
@@ -165,7 +165,7 @@ Commercial support is available at
 # java -jar ./build/libs/hellospringboot-0.0.1-SNAPSHOT.jar 
 ```
 应用就可以跑起来了，访问 ip:8080 就可以看到有 Helloworld 返回了。但是这还不是我们想要的，我们要实现容器化部署。于是我编写了 Dockerfile：
-```
+```dockerfile
 FROM java:8-jre
 
 MAINTAINER <chenliangtang>
